--- a/plugin.xml
+++ b/plugin.xml
@@ -2,46 +2,45 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	id="cordova-plugin-pl43scanner"
-	version="0.0.1">
-	<!-- 插件名称 -->
+	version="0.0.2">
 	<name>PL43Scanner</name>
-	<!-- 插件描述 -->
 	<description>
 		This plugin allows PL43 to scan barcode
 	</description>
-	<!-- 插件license -->
 	<license>MIT</license>
-	<!-- 插件所依赖的cordova版本 -->
 	<engines>
 		<engine name="cordova" version=">=3.0.0" />
 	</engines>  
-	<!-- 插件模块，src指明js文件路径，clobbers指明前台js调用的接口名,这个配置会被ionic自动编译到项目的platforms/android/assets/cordova_plugin.js 文件中,其中本配置文件中的开头的id指定了src所编译后存放的目录，version指定了本插件的版本 -->
 	<js-module src="www/pl43scanner.js" name="PL43Scanner">
 		<clobbers target="cordova.plugins.pl43scanner" />
 	</js-module>
 	<!-- android -->
 	<platform name="android">
-		<!-- 配置Android项目中的 res/xml/config.xml 文件，编译后会将feature配置到widget中，注意这个feature的name 值，这个值和我们www/console.js 文件中的第三个参数对应-->
-		<config-file target="res/xml/config.xml" parent="/*">
+    <source-file src="src/android/com/sysmagic/plugins/pl43scanner/PL43Scanner.java" target-dir="src/com/sysmagic/plugins/pl43scanner" />
+
+    <config-file target="res/xml/config.xml" parent="/*">
 			<feature name="PL43Scanner">
-				<param name="android-package" value="com.sysmagic.plugins.PL43Scanner"/>
+				<param name="android-package" value="com.sysmagic.plugins.pl43scanner.PL43Scanner"/>
 			</feature>
 		</config-file>		
-        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+    <config-file target="AndroidManifest.xml" parent="/manifest/application">
 			<activity
 				android:name="com.sysmagic.mob.ScanActivity"
-				android:clearTaskOnLaunch="true"
 				android:configChanges="orientation|keyboardHidden"
 				android:theme="@android:style/Theme.Translucent.NoTitleBar"
 				android:windowSoftInputMode="stateAlwaysHidden"
 				android:exported="false">
 				<intent-filter>
+					<action android:name="com.sysmagic.mob.SCAN" />
 					<category android:name="android.intent.category.DEFAULT"/>
 				</intent-filter>
 			</activity>			
 			<service android:name="com.sysmagic.mob.ScanService"></service>
-        </config-file>
-		<!-- 指定编译后的文件位置 -->
-		<source-file src="src/android/com/sysmagic/plugins/PL43Scanner.java" target-dir="src/com/sysmagic/plugins" />
+    </config-file>
+    <source-file src="src/android/scanner.jar" target-dir="libs"/>
+    <source-file src="src/android/armeabi/libdevapi.so" target-dir="libs"/>
+    <source-file src="src/android/armeabi/libSerialPort.so" target-dir="libs"/>
+    <source-file src="src/android/armeabi-v7a/libdevapi.so" target-dir="libs"/>
+    <source-file src="src/android/armeabi-v7a/libSerialPort.so" target-dir="libs"/>
 	</platform>
 </plugin>
