--- a/plugin.xml
+++ b/plugin.xml
@@ -16,31 +16,12 @@
 	</js-module>
 	<!-- android -->
 	<platform name="android">
-    <source-file src="src/android/com/sysmagic/plugins/pl43scanner/PL43Scanner.java" target-dir="src/com/sysmagic/plugins/pl43scanner" />
+    <source-file src="src/android/com/sysmagic/plugins/PL43Scanner.java" target-dir="src/com/sysmagic/plugins" />
 
     <config-file target="res/xml/config.xml" parent="/*">
 			<feature name="PL43Scanner">
-				<param name="android-package" value="com.sysmagic.plugins.pl43scanner.PL43Scanner"/>
+				<param name="android-package" value="com.sysmagic.plugins.PL43Scanner"/>
 			</feature>
-		</config-file>		
-    <config-file target="AndroidManifest.xml" parent="/manifest/application">
-			<activity
-				android:name="com.sysmagic.mob.ScanActivity"
-				android:configChanges="orientation|keyboardHidden"
-				android:theme="@android:style/Theme.Translucent.NoTitleBar"
-				android:windowSoftInputMode="stateAlwaysHidden"
-				android:exported="false">
-				<intent-filter>
-					<action android:name="com.sysmagic.mob.SCAN" />
-					<category android:name="android.intent.category.DEFAULT"/>
-				</intent-filter>
-			</activity>			
-			<service android:name="com.sysmagic.mob.ScanService"></service>
-    </config-file>
-    <source-file src="src/android/scanner.jar" target-dir="libs"/>
-    <source-file src="src/android/armeabi/libdevapi.so" target-dir="libs"/>
-    <source-file src="src/android/armeabi/libSerialPort.so" target-dir="libs"/>
-    <source-file src="src/android/armeabi-v7a/libdevapi.so" target-dir="libs"/>
-    <source-file src="src/android/armeabi-v7a/libSerialPort.so" target-dir="libs"/>
+		</config-file>
 	</platform>
 </plugin>
